Reorganizing sources. Fixed tests