@@ -1,16 +1,18 @@
 /*
- * Configuration Processors
- * Copyright (C) 2012-2013  BAXTER Technologies
+ * Yurconf Processor Fundamental
+ * This software is distributed as is.
  * 
- * This software is a property of BAXTER Technologies
- * and should remain that way. If you got this source
- * code from elsewhere please immediately inform Franck.
+ * We do not care about any damages that could be caused
+ * by this software directly or indirectly.
+ * 
+ * Join our team to help make it better.
  */
 package org.yurconf.processor.upgrade;
 
 import java.io.File;
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.List;
 
 import org.apache.commons.io.FileUtils;
@@ -35,7 +37,7 @@ class AddFileCommand extends AbstractFileCommand implements UpgradeCommand
 	final File destDir = context.getProcessorFactory().getRepository()
 	    .getProductDirectory(context.getDescriptor().getProductId());
 	// the URL to processor's directory with default sources
-	final URL sourceBase = context.getDescriptor().getSourceUrl();
+	final URI sourceBase = context.getDescriptor().getDefaultSourceUri();
 	try
 	{
 	  final List<String> entryPaths = listFilenames(sourceBase);
@@ -46,10 +48,10 @@ class AddFileCommand extends AbstractFileCommand implements UpgradeCommand
 		{
 		  logger.warn("Target file will be overwritten {}", destFile.getAbsolutePath());
 		}
-		FileUtils.copyURLToFile(new URL(sourceBase, filename), destFile);
+		FileUtils.copyURLToFile(sourceBase.resolve(filename).toURL(), destFile);
 	  }
 	}
-	catch (final IOException e)
+	catch (final IOException | URISyntaxException e)
 	{
 	  throw new UpgradeException(e);
 	}
